comments from Gus

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -95,9 +95,9 @@ appendix) approximation to \vz.
 Because we use \vb\ rather than \vz\, we do not calculate absolute kinematic
 ages using a published age--velocity dispersion relation (AVR), calibrated with
 vertical velocity.
-In future it may be possible to account for the differences between \vb\ and
-\vz, or marginalize over missing RV measurements and the \kepler\ selection
-function, in order to infer absolute ages.
+In the future it may be possible to account for the differences between \vb\
+and \vz, or marginalize over missing RV measurements and the \kepler\
+selection function, in order to infer the absolute ages of groups of stars.
 Regardless of direction however, velocity dispersion is expected to
 monotonically increase over time \citep[\eg][]{holmberg2009}, and can
 therefore be used to {\it rank} groups of stars by age.
