--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -8,6 +8,7 @@
 \usepackage{cite, natbib}
 \usepackage{float}
 \usepackage{amsmath}
+\usepackage[T1]{fontenc}
 \usepackage{hyperref}
 \usepackage{epsfig}
 \usepackage{cases}
@@ -89,17 +90,17 @@
 \title{Exploring the evolution of stellar rotation using Galactic kinematics}
 
 \author{%
-    Ruth Angus$^{1, 2, 3}$,
-    Angus Beane$^4$,
-    Adrian M. Price-Whelan$^2$,
-    Jason Curtis$^1$,
+    Ruth Angus$^{1, 2, 3}$,  % signed off
+    Angus Beane$^4$,  % signed off
+    Adrian M. Price-Whelan$^2$,  % signed off
+    Jason Curtis$^1$,  % signed off
     Travis Berger$^6$,
     Elisabeth Newton$^5$,
     Jennifer van Saders$^6$,
     Rocio Kiman$^7$,
-    Dan Foreman-Mackey$^2$,
+    Dan Foreman-Mackey$^2$,  % signed off
     Yuxi Lu$^{1, 3}$,
-    Lauren Anderson$^8$}
+    Lauren Anderson$^8$}  % signed off
 
 \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
 Manhattan, NY, USA}
@@ -107,8 +108,8 @@ Manhattan, NY, USA}
 162 5th Avenue, Manhattan, NY, USA}
 \altaffiltext{\columbia}{Department of Astronomy, Columbia
 University, Manhattan, NY, USA}
-\altaffiltext{\cfa}{Harvard-Smithsonian Center for Astrophysics, Cambridge,
-MA, USA}
+\altaffiltext{\cfa}{Center for Astrophysics {\normalfont |} Harvard \&
+Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
 \altaffiltext{\dartmouth}{Dartmouth College, Hanover, NH, USA}
 \altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai'i at
 M\={a}noa, Honolulu, HI, USA}
