--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -38,13 +38,14 @@ synchronized binaries.}
 We used kinematics to indicate that there is a population of
 synchronized binaries with rotation periods less than around 10 days.}
 
-\item{{\bf \sigmavb\ can be used as an age proxy for \kepler\ stars.} In the
-    appendix of this paper we demonstrate that the dispersion of velocities in
-        the direction of Galactic latitude, \vb, can be used as an age proxy,
-        by showing that there is no strong evidence for mass-dependent heating
-        in low-mass \kepler\ dwarfs: the velocity dispersions of K and M
-        dwarfs, whose main-sequence lifetimes are longer than around 11 Gyrs,
-        do not appear to increase with decreasing mass.
+\item{{\bf \sigmavb\ can be used as an age proxy for (low Galactic latitude)
+    \kepler\ stars.} In the appendix of this paper we demonstrate that the
+        dispersion of velocities in the direction of Galactic latitude, \vb,
+        can be used as an age proxy, by showing that there is no strong
+        evidence for mass-dependent heating in low-mass \kepler\ dwarfs: the
+        velocity dispersions of K and M dwarfs, whose main-sequence lifetimes
+        are longer than around 11 Gyrs, do not appear to increase with
+        decreasing mass.
 Although {\it vertical} velocity, \vz, is a quantity that has been
 demonstrated to trace time-dependent orbital heating in the disc of the
 Galaxy, most stars with measured rotation periods do not yet have radial
