--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -94,12 +94,12 @@
     Angus Beane$^4$,  % signed off
     Adrian M. Price-Whelan$^2$,  % signed off
     Jason Curtis$^1$,  % signed off
-    Travis Berger$^6$,
+    Travis Berger$^6$,  % signed off
     Elisabeth Newton$^5$,
     Jennifer van Saders$^6$,
     Rocio Kiman$^7$,
     Dan Foreman-Mackey$^2$,  % signed off
-    Yuxi Lu$^{1, 3}$,
+    Yuxi Lu$^{1, 3}$,  % signed off
     Lauren Anderson$^8$}  % signed off
 
 \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
@@ -111,8 +111,8 @@ University, Manhattan, NY, USA}
 \altaffiltext{\cfa}{Center for Astrophysics {\normalfont |} Harvard \&
 Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
 \altaffiltext{\dartmouth}{Dartmouth College, Hanover, NH, USA}
-\altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai'i at
-M\={a}noa, Honolulu, HI, USA}
+\altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai`i, 2680
+Woodlawn Drive, Honolulu, HI 96822, USA}
 \altaffiltext{\cuny}{Department of physics, CUNY Graduate Center, City
 University of New York, Manhattan, NY, USA}
 \altaffiltext{\carnegie}{Observatories of the Carnegie Institution for
