incorporating jen's comments

--- a/paper/results.tex
+++ b/paper/results.tex
@@ -132,6 +132,56 @@ velocity dispersions are cooler than 4500 K.
 This implies that the oldest stars with detectable rotation periods, are
 cooler than 4500 K, \ie\ these-low mass stars stay active longer than more
 massive stars.
+To investigate this idea further, we compared the velocity dispersions of
+stars with measured rotation periods, to the velocity dispersions of the
+overall \kepler\ sample.
+We calculated the velocity dispersions for all stars in the \kepler\ field,
+after removing visual binaries, subgiants, stars fainter than 16th magnitude,
+and high Galactic latitude stars, following the method described in section
+\ref{sec:method}.
+We then compared these velocity dispersions to the velocity dispersions of
+stars in the \mct\ sample.
+If the rotation periods of G stars are only detectable when they are young,
+G stars with measured periods should have smaller velocity dispersions than
+the overall \kepler\ field.
+We calculated the ratio of \sigmavb\ for the entire \Kepler\ sample to
+\sigmavb\ for stars with rotation periods published in \mct, as a function of
+\teff\ (see figure \ref{fig:compare}).
+A larger ratio means the rotating star sample is {\it younger}, on average,
+than the overall \Kepler\ population, and a ratio of 1 means that the rotating
+stars have the {\it same} age distribution as the overall Kepler sample.
+Figure \ref{fig:compare} shows that this ratio is largest for G stars and
+approaches unity for K and early M dwarfs.
+This indicates that the G stars with detectable rotation periods are, on
+average, {\it younger} than the total population of G stars in the Kepler
+field.
+On the other hand, the late K and early M dwarfs with detectable rotation
+periods have a similar age distribution to the overall Kepler population which
+suggests that the oldest K and M dwarfs are represented in the \mct\ sample.
+This result bolsters the evidence that M dwarf rotation periods are measurable
+at older ages than G dwarf rotation periods.
+G stars become magnetically inactive and have fewer active surface regions
+{\it at a younger age than M dwarfs}.
+
+\begin{figure}
+  \caption{
+    Velocity dispersions for the entire \kepler\ field divided by the velocity
+    dispersion of stars with measured rotation periods in \mct,
+    as a function of effective temperature.
+    A larger ratio means that the overall \kepler\ field is older, on average,
+    than stars in the \mct\ catalog.
+    As this ratio approaches unity the two populations have similar kinematic
+    ages.
+    The large ratio for the hottest stars indicates that G dwarfs become
+    inactive at young ages.
+    This ratio approaches unity at low temperatures, showing that K and early
+    M dwarf rotation periods are measurable over a large range of ages.
+}
+  \centering
+    \includegraphics[width=1\textwidth]{field_comparison}
+\label{fig:compare}
+\end{figure}
+
 
 \subsection{Synchronized binaries and the \kepler\ period gap}
 \label{sec:gap}
@@ -182,6 +232,7 @@ The top panel of figure \ref{fig:vplot} suggests that the \citet{angus2019},
 Praesepe-based gyrochronology model is valid below the gap but not above.
 Gyrochrones follow lines of constant velocity dispersion below the gap, but
 {\it cross} lines of constant velocity dispersion above the gap.
+This phenomenon is robust to the choice of bin size and position.
 Although we do not provide an in-depth analysis here (and more data may be
 needed to confirm a connection) these data suggest that the gap may indeed
 separate a young regime where stellar cores are decoupled from their envelopes
@@ -213,11 +264,14 @@ suggesting that these groups are part of the same Galactic population.
 Previously, only the overall velocity dispersions of all stars above and below
 the gap have been compared, leading to the assumption that these groups belong
 to two distinct populations \citep{mcquillan2014}.
-The smooth increase in velocity dispersion across the gap shown here supports
-the hypothesis that the gap is caused by a phenomenon of magnetic or
-structural stellar evolution, not a discontinuity in the local star formation
-history.
+The smooth increase in velocity dispersion across the gap shown here suggests
+that stars above and below are part of the same stellar population.
+However, it does not rule out the possibility that a brief cessation of star
+formation in the Solar neighborhood, around one Gyr ago, may have caused this
+gap.
 
+In the final part of our analysis, we investigated the potential for using
+kinematics to identify synchronized binaries in the \mct\ sample.
 Synchronized binaries are pairs of stars whose rotation periods are equal to
 their orbital period.
 Since synchronization appears to happen at rotation periods of 7 days or
