--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -4,9 +4,9 @@ stars.
 In this work, we use the velocity dispersions of low-mass \kepler\ dwarfs as
 an age proxy, to reveal their rotational evolution and demonstrate that
 kinematics could be a useful tool for calibrating gyrochronology.
-We find that a gyrochronology model, calibrated to fit the period--\teff\
-relationship of the Praesepe cluster, does not apply to stars older than
-around 1 Gyr.
+We find that a linear gyrochronology model, calibrated to fit the
+period--\teff\ relationship of the Praesepe cluster, does not apply to stars
+older than around 1 Gyr.
 Although late-K dwarfs spin more slowly than early-K and late-G dwarfs when
 they are young, at old ages we find that late-G and early-K dwarfs rotate at
 the {\it same rate} or faster than late-K dwarfs of the same age.
