--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -5,8 +5,8 @@ catalog to explore the evolution of stellar rotation period as a function of
 effective temperature and age.
 Our conclusions are as follows:
 \begin{itemize}
-\item{{\bf Magnetic braking efficiency doesn't always increase with decreasing
-mass for K dwarfs.}
+\item{{\bf Spin-down rate doesn't always increase with decreasing mass for K
+    dwarfs.}
 Although at young ages, rotation period is anti-correlated with \teff\ (as
 seen in many young open clusters, including Praesepe), at intermediate ages the
 relation flattens out and K dwarfs of different masses rotate at the same
@@ -21,8 +21,9 @@ time-dependent core-envelope angular momentum transport \citep{spada2019}.}
 
 \item{{\bf Low-mass stars stay active longer.}
 We found that the oldest stars in the \mct\ catalog are cooler than 4500
-K, which suggests that lower-mass stars remain active for longer, allowing
-their rotation periods to be measured at older ages.}
+K, which agrees with previous results which show that lower-mass stars remain
+        active for longer, allowing their rotation periods to be measured at
+        older ages.}
 
 \item{{\bf The \kepler\ period gap may be related to core-envelope coupling.}
 We speculated that the rotation period gap \citep{mcquillan2014} may separate
