--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -24,7 +24,8 @@ For example, the early-to-mid M dwarfs in the $\sim$ 650 Myr Praesepe cluster
 spin more slowly than the G dwarfs; in theory because lower-mass stars have
 deeper convective zones which generate stronger magnetic fields and more
 efficient magnetic braking.
-However, in the NGC 6811 cluster which is around 1.1 Gyr \citep{janes2011},
+However, in the NGC 6811 cluster which is around 1 Gyr \citep{janes2011,
+sandquist2016},
 late-K dwarfs rotate at the {\it same rate} as early-K dwarfs
 \citep{curtis2019}.
 In other words, convection zone depth cannot be the only variable that affects
