--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -110,7 +110,8 @@ Manhattan, NY, USA}
 University, Manhattan, NY, USA}
 \altaffiltext{\cfa}{Center for Astrophysics {\normalfont |} Harvard \&
 Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
-\altaffiltext{\dartmouth}{Dartmouth College, Hanover, NH, USA}
+\altaffiltext{\dartmouth}{Department of Physics and Astronomy, Dartmouth
+College, Hanover, NH, USA}
 \altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai`i, 2680
 Woodlawn Drive, Honolulu, HI 96822, USA}
 \altaffiltext{\cuny}{Department of physics, CUNY Graduate Center, City
