--- a/paper/results.tex
+++ b/paper/results.tex
@@ -17,7 +17,8 @@ If we assume that mass dependent heating does not strongly affect this sample
 and \vb\ at low galactic latitudes is an unbiased tracer of \vz, then \vb\
 velocity dispersion can be interpreted as an age proxy, and stars plotted in a
 similar color in figure \ref{fig:vplot} are similar ages.
-We discuss this assumption further in the appendix.
+In the appendix of this paper, we show that this assumption appears valid for
+stars with Galactic latitude $<$ 15\degrees.
 \begin{figure}
   \caption{
     Top: Rotation period vs effective temperature for stars in the \mct\
@@ -29,8 +30,8 @@ We discuss this assumption further in the appendix.
     These gyrochrones do not appear to reflect the evolution of field stars at
     long rotation periods/old ages because they do not trace lines of constant
     velocity dispersion.
-    Gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr in both top
-    and bottom panels.
+    Gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr (Solar age)
+    in both top and bottom panels.
     Bottom: Same as top panel with rotation period vs {\it mass}
     \citep[from][]{berger2020}.
     White lines show gyrochrones from a model that includes mass and
@@ -53,7 +54,8 @@ This result is insensitive to the choice of bin position and size.
 Black lines show gyrochrones from the \citet{angus2019} gyrochronology model,
 which projects the rotation-color relation of Praesepe to longer rotation
 periods over time.
-These gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr.
+These gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 (Solar age)
+Gyr.
 At the youngest ages, these gyrochrones describe the data well: the palest
 yellow (youngest) stars with the lowest velocity dispersions all fall close to
 the 0.5 Gyr gyrochrone.
@@ -72,7 +74,7 @@ these Praesepe-based models.
 
 The bottom panel of figure \ref{fig:vplot} shows velocity dispersion as a
 function of rotation period and {\it mass}, \citep[from][]{berger2020}, with
-gyrochrones from the \citep{spada2019} model shown in white.
+gyrochrones from the \citet{spada2019} model shown in white.
 These gyrochrones are also plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr.
 Each point plotted in the top panel also appears in the bottom panel with the
 same color.
@@ -112,7 +114,7 @@ theory, and the gyrochronology paradigm that has been in place for decades
 \citep[\eg][]{skumanich1972, noyes1984, kawaler1988, barnes2003, angus2019}.
 According to the data presented in figure \ref{fig:vplot} however, at
 intermediate ages, the rotation periods of K dwarfs appear {\it constant} with
-mass, and at late ages rotation period {\it increases} with {\it increaasing}
+mass, and at late ages rotation period {\it increases} with {\it increasing}
 mass.
 The interpretation of this, according to the \citet{spada2019} model, is that
 lower-mass stars are still braking more efficiently at these intermediate and
@@ -197,11 +199,11 @@ G stars become magnetically inactive and have fewer active surface regions
     than this lower edge.
     Stars were separated into these three groups using \citet{angus2019}
     gyrochronology models, with the scheme shown in the legend.
-    Only stars cooler than 5000 K are plotted in
-    the bottom panel in order to isolate populations above and below the
-    period gap, which only extends up to temperatures of $\sim$4600 K.
     Bottom: the velocities of these groups of stars (in the direction of
     Galactic latitude, $b$) are shown as a function of rotation period.
+    Only stars cooler than 5000 K are plotted in the bottom panel in order to
+    isolate populations above and below the period gap, which only extends up
+    to temperatures of $\sim$4600 K.
     The black line indicates the velocity standard deviation as a function of
     period.
 }
@@ -254,8 +256,8 @@ Stars were separated into these three groups using \citet{angus2019}
 gyrochronology model, according to the scheme shown in the legend.
 Only stars cooler than 5000 K are included in the bottom panel in order to
 isolate populations above and below the period gap, which only extends up to a
-temperature of $\sim$4600 K in our sample \citep[Although][found that the gap
-extends to temperatures as hot as 6000 K]{davenport2017}.
+temperature of $\sim$4600 K in our sample, although \citet{davenport2017}
+found that the gap extends to temperatures as hot as 6000 K.
 In general, velocity dispersion increases with rotation period because both
 quantities increase with age.
 There is a smooth transition in velocity dispersion between stars with
