--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1156,26 +1156,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{west2008,
-       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Bochanski}, John J. and
-         {Covey}, Kevin R. and {Reid}, I. Neill and {Dhital}, Saurav and
-         {Hilton}, Eric J. and {Masuda}, Michael},
-        title = "{Constraining the Age-Activity Relation for Cool Stars: The Sloan Digital Sky Survey Data Release 5 Low-Mass Star Spectroscopic Sample}",
-      journal = {\aj},
-     keywords = {solar neighborhood, Galaxy: kinematics and dynamics, Galaxy: structure, stars: activity, stars: late-type, stars: low-mass, brown dwarfs, Astrophysics},
-         year = "2008",
-        month = "Mar",
-       volume = {135},
-       number = {3},
-        pages = {785-795},
-          doi = {10.1088/0004-6256/135/3/785},
-archivePrefix = {arXiv},
-       eprint = {0712.1590},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2008AJ....135..785W},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 
 @ARTICLE{kiman2019,
        author = {{Kiman}, Rocio and {Schmidt}, Sarah J. and {Angus}, Ruth and
@@ -1429,22 +1409,26 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{west2008,
+       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Bochanski}, John J. and
+         {Covey}, Kevin R. and {Reid}, I. Neill and {Dhital}, Saurav and
+         {Hilton}, Eric J. and {Masuda}, Michael},
+        title = "{Constraining the Age-Activity Relation for Cool Stars: The Sloan Digital Sky Survey Data Release 5 Low-Mass Star Spectroscopic Sample}",
+      journal = {\aj},
+     keywords = {solar neighborhood, Galaxy: kinematics and dynamics, Galaxy: structure, stars: activity, stars: late-type, stars: low-mass, brown dwarfs, Astrophysics},
+         year = 2008,
+        month = mar,
+       volume = {135},
+       number = {3},
+        pages = {785-795},
+          doi = {10.1088/0004-6256/135/3/785},
+archivePrefix = {arXiv},
+       eprint = {0712.1590},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008AJ....135..785W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
-@article{astropy2018,
-    Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-    Adsurl = {https://ui.adsabs.harvard.edu/#abs/2018AJ....156..123T},
-    Author = {{Price-Whelan}, A.~M. and {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {VanderPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and {Paper Contributors}, (Primary and {Aldcroft}, T.~L. and {Cruz}, K.~L. and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Coordination Committee}, (Astropy and {Ardelean}, C. and {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and {Corrales}, L. and {Crichton}, D. and {D{\textquoteright}Avella}, D. and {Deil}, C. and {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and {Zabalza}, V. and {Contributors}, (Astropy)},
-    doi = {10.3847/1538-3881/aabc4f},
-    Eid = {123},
-    Journal = {\aj},
-    Keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
-    Month = Sep,
-    Pages = {123},
-    Primaryclass = {astro-ph.IM},
-    Title = {{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}},
-    Volume = {156},
-    Year = 2018,
-    Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
 
 @ARTICLE{bird2013,
        author = {{Bird}, Jonathan C. and {Kazantzidis}, Stelios and {Weinberg}, David H. and
@@ -1466,4 +1450,43 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...773...43B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{sandquist2016,
+       author = {{Sandquist}, Eric L. and {Jessen-Hansen}, J. and {Shetrone}, Matthew D. and
+         {Brogaard}, Karsten and {Meibom}, S{\o}ren and {Leitner}, Marika and
+         {Stello}, Dennis and {Bruntt}, Hans and {Antoci}, Victoria and
+         {Orosz}, Jerome A. and {Grundahl}, Frank and {Frandsen}, S{\o}ren},
+        title = "{The Age and Distance of the Kepler Open Cluster NGC 6811 from an Eclipsing Binary, Turnoff Star Pulsation, and Giant Asteroseismology}",
+      journal = {\apj},
+     keywords = {asteroseismology, binaries: eclipsing, binaries: spectroscopic, open clusters and associations: individual: NGC 6811, stars: distances, stars: variables: delta Scuti, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = nov,
+       volume = {831},
+       number = {1},
+          eid = {11},
+        pages = {11},
+          doi = {10.3847/0004-637X/831/1/11},
+archivePrefix = {arXiv},
+       eprint = {1608.03917},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...831...11S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{astropy2018,
+    Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    Adsurl = {https://ui.adsabs.harvard.edu/#abs/2018AJ....156..123T},
+    Author = {{Price-Whelan}, A.~M. and {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {VanderPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and {Paper Contributors}, (Primary and {Aldcroft}, T.~L. and {Cruz}, K.~L. and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Coordination Committee}, (Astropy and {Ardelean}, C. and {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and {Corrales}, L. and {Crichton}, D. and {D{\textquoteright}Avella}, D. and {Deil}, C. and {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and {Zabalza}, V. and {Contributors}, (Astropy)},
+    doi = {10.3847/1538-3881/aabc4f},
+    Eid = {123},
+    Journal = {\aj},
+    Keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
+    Month = Sep,
+    Pages = {123},
+    Primaryclass = {astro-ph.IM},
+    Title = {{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}},
+    Volume = {156},
+    Year = 2018,
+    Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
 
